--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jamstack Explorers - Up and Running with Serverless Functions</title>
-  </head>
-  <body>
-    <h1>Up and Running with Serverless Functions</h1>
-    <button id="fetch-btn">Fetch</button>
-    <button id="fetch-pokedex-btn">Fetch Pokedex</button>
-    <p id="response-output">Response Placeholder</p>
+<html>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        const fetchBtn = document.getElementById('fetch-btn')
-        const responseText = document.getElementById('response-output')
-        const fetchPokedexBtn = document.getElementById('fetch-pokedex-btn')
+<head>
+  <title>Chat App</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f5f5f5;
+      flex-direction: column;
+    }
 
+    #chat-box {
+      max-width: 90%;
+      width: 300px;
+      height: 400px;
+      border: 1px solid #ddd;
+      padding: 10px;
+      background-color: #fff;
+      overflow: auto;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
 
-        fetchBtn.addEventListener('click', async () => {
-          const response = await fetch('/.netlify/functions/hello-world')
-            .then((res) => res.json())
-          responseText.innerText = JSON.stringify(response)
-        })
-        fetchPokedexBtn.addEventListener('click', async () => {
-          const response = await fetch('/.netlify/functions/pokedex')
-            .then(response => response.json())
-          responseText.innerText = JSON.stringify(response)
-        })
+    #user-input {
+      max-width: 100%;
+      width: 240px;
+      padding: 5px;
+      margin-top: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border: 1px solid #ddd;
+    }
+
+    #send-button {
+      width: 50px;
+      padding: 5px;
+      margin-top: 10px;
+      background-color: #007BFF;
+      color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border: none;
+    }
+
+    .user-message {
+      color: #007BFF;
+      margin: 5px 0;
+    }
+
+    .ai-message {
+      color: #333;
+      margin: 5px 0;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="chat-box"></div>
+  <input id="user-input" type="text" />
+  <button id="send-button">Send</button>
+
+  <script>
+    document.getElementById('send-button').addEventListener('click', function () {
+      const userInput = document.getElementById('user-input');
+      const chatBox = document.getElementById('chat-box');
+
+      // Append user's message to chat box
+      chatBox.innerHTML += '<div class="user-message">User: ' + userInput.value + '</div>';
+
+      // Call serverless function
+      fetch('/.netlify/functions/chat', {
+        method: 'POST',
+        body: JSON.stringify({ message: userInput.value }),
+        headers: { 'Content-Type': 'application/json' }
       })
-    </script>
-  </body>
+        .then(response => response.json())
+        .then(data => {
+          // Append AI's response to chat box
+          chatBox.innerHTML += '<div class="ai-message">AI: ' + data.message + '</div>';
+        });
+
+      // Clear user input
+      userInput.value = '';
+    });
+  </script>
+</body>
+
 </html>
