--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
-<!-- test changes 22-->
+<html id="thehtml">
+
 <head>
   <title>Chat App</title>
   <style>
+    
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -11,72 +12,165 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
       background-color: #f5f5f5;
+    }
+
+    .chat-container {
+      min-height: 100vh;
+      background-color: #f0f0f0;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+      display: flex;
       flex-direction: column;
     }
 
-    #chat-box {
-      max-width: 90%;
-      width: 300px;
-      height: 400px;
-      border: 1px solid #ddd;
+    .chat-header {
+      background-color: #f0f0f0;
+      color: #333;
+      padding: 15px;
+      text-align: center;
+      font-size: 24px;
+      font-weight: bold;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .chat-wrapper {
+      display: flex;
+      flex-grow: 1;
+      flex-basis: auto;
+      padding: 15px;
+      overflow-y: auto;
+      background-color: #f0f0f0;
+      font-size: 18px;
+      justify-content: center;
+    }
+
+    .chat-messages {
+      flex-grow: 1;
+      max-width: 750px;
+      flex-basis: auto;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .message {
+      margin-bottom: 15px;
       padding: 10px;
-      background-color: #fff;
-      overflow: auto;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    #user-input {
-      max-width: 100%;
-      width: 240px;
-      padding: 5px;
-      margin-top: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      border: 1px solid #ddd;
-    }
-
-    #send-button {
-      width: 50px;
-      padding: 5px;
-      margin-top: 10px;
-      background-color: #007BFF;
-      color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      border: none;
+      border-radius: 10px;
     }
 
     .user-message {
-      color: #007BFF;
-      margin: 5px 0;
+      background-color: #fff;
+      color: #333;
+      align-self: flex-end;
+      text-align: right;
     }
 
     .ai-message {
       color: #333;
-      margin: 5px 0;
+      text-align: left;
+    }
+
+    .input-container {
+      display: flex;
+      align-items: center;
+      padding: 15px;
+      background-color: #f0f0f0;
+      border-top: 1px solid #ddd;
+      justify-content: center;
+    }
+
+    #user-input {
+      flex-grow: 1;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      margin-right: 15px;
+      font-size: 20px;
+      max-width: 600px;
+    }
+
+    #send-button {
+      padding: 10px 20px;
+      background-color: #007BFF;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 20px;
+    }
+
+    .placeholder-message {
+      color: #777;
+      margin: auto;
+    }
+
+    /* Add a loading indicator style */
+    .loading-yet {
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #3498db;
+      border-radius: 50%;
+      width: 6px;
+      height: 6px;
+      animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
   </style>
 </head>
 
 <body>
-  <div id="chat-box"></div>
-  <input id="user-input" type="text" />
-  <button id="send-button">Send</button>
-
+  <div class="chat-container">
+    <div class="chat-header">Chat App</div>
+    <div class="chat-wrapper">
+      <div class="chat-messages" id="chat-box">
+        <!-- content -->
+        <div class="placeholder-message">Start a conversation by typing a message...</div>
+        <!-- <div class="message ai-message loading-yet"></div> -->
+        <!-- <div class="message ai-message">AI: Hello! You can ask me anything.</div>
+        <div class="message user-message">User: What's the weather like today?</div> -->
+      </div>
+    </div>
+    <div class="input-container">
+      <input id="user-input" type="text" placeholder="Type your message...">
+      <span class="loading-message" style="display: none;"></span>
+      <button id="send-button">Send</button>
+    </div>
+  </div>
   <script>
-    // Initialize an array to store messages
     const messageHistory = [];
 
-    document.getElementById('send-button').addEventListener('click', function () {
-      const userInput = document.getElementById('user-input');
-      const chatBox = document.getElementById('chat-box');
+    const userInput = document.getElementById('user-input');
+    const chatBox = document.getElementById('chat-box');
+    const placeholderMessage = document.querySelector('.placeholder-message');
+    const sendButton = document.getElementById('send-button');
+    const loadingIndicator = document.querySelector('.loading-message');
 
-      // Append user's message to chat box and add it to the messageHistory array
+    function sendMessageHandler() {
+      // Hide the placeholder message when the user sends the first message
+      if (placeholderMessage.style.display !== 'none') {
+        placeholderMessage.style.display = 'none';
+      }
+
+      // Disable the send button and show loading indicator during sending
+      sendButton.disabled = true;
+      sendButton.style.readonly = true;
+      loadingIndicator.style.display = 'block';
+
       const userMessage = 'User: ' + userInput.value;
-      chatBox.innerHTML += '<div class="user-message">' + userMessage + '</div>';
+      chatBox.innerHTML += '<div class="message user-message">' + userMessage + '</div>';
+      chatBox.innerHTML += '<div class="message ai-message loading-yet"></div>';
+      scrollToBottom();
       messageHistory.push({ role: "user", content: userMessage });
+      userInput.value = '';
 
-      // Call serverless function with the message history
       fetch('/.netlify/functions/chat', {
         method: 'POST',
         body: JSON.stringify({ message: userInput.value, history: messageHistory }),
@@ -84,17 +178,35 @@
       })
         .then(response => response.json())
         .then(data => {
-          // Append AI's response to chat box and add it to the messageHistory array
           const aiMessage = 'AI: ' + data.message;
-          chatBox.innerHTML += '<div class="ai-message">' + aiMessage + '</div>';
+
+          const loadingYet = document.querySelector('.loading-yet');
+          loadingYet.innerHTML = aiMessage;
+          loadingYet.classList.remove('loading-yet');
           messageHistory.push({ role: "assistant", content: aiMessage });
-          console.log("messageHistory")
-          console.log(messageHistory)
+
+          // Clear user input and re-enable the send button
+          sendButton.disabled = false;
+          sendButton.style.readonly = false;
+          loadingIndicator.style.display = 'none';
+          // Scroll the chat box to the bottom
+          scrollToBottom();
         });
-      console.log("Clear user input")
-      // Clear user input
-      userInput.value = '';
+    }
+
+    function scrollToBottom () {
+      const thehtml = document.getElementById('thehtml');
+      thehtml.scrollTop = thehtml.scrollHeight;
+    }
+    
+    sendButton.addEventListener('click', sendMessageHandler);
+    userInput.addEventListener('keyup', function (event) {
+      const sendButton = document.getElementById('send-button');
+      if (event.key === 'Enter' && sendButton.disabled === false) {
+        sendMessageHandler();
+      }
     });
+
   </script>
 </body>
 
