--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,8 @@
       background-color: #f0f0f0;
       border-top: 1px solid #ddd;
       justify-content: center;
+      padding-bottom: 35px;
+      
     }
 
     #user-input {
@@ -139,8 +141,7 @@
       </div>
     </div>
     <div class="input-container">
-      <input id="user-input" type="text" placeholder="Type your message...">
-      <span class="loading-message" style="display: none;"></span>
+      <input id="user-input" type="text" placeholder="Type your message..." autofocus>
       <button id="send-button">Send</button>
     </div>
   </div>
